--- a/f90trj/Makefile.windows
+++ b/f90trj/Makefile.windows
@@ -3,7 +3,7 @@ PROGRAM=trjwgui
 
 SOURCE=interpol.f90 trj_mod.f90 ptotheta.f90 trj_netcdf.f90 date_conv.f90 trj_winds.f90 derivs.f90 derivstr.f90 ode.f90 odeint.f90 stereograph.f90 trj_main_mod.f90 main_gui.f90
 
-CPPSRC=../gui/main.cpp
+CPPSRC=../gui/Windows/main.cpp
 
 F95=gfortran
 
