--- a/f90trj/Makefile.gtk
+++ b/f90trj/Makefile.gtk
@@ -8,8 +8,8 @@ CPPSRC=../gui/Gtk-3/TrjApp.cpp
 F95=gfortran
 
 FFLAGS=-fdefault-real-8 -fbounds-check
-LIBS=-L/home/hernan/netcdf/lib -lnetcdff
-INCLUDES = -I/home/hernan/netcdf/include
+LIBS=-L/usr/lib -lnetcdff
+INCLUDES = -I/usr/include
 
 all : $(SOURCE)
 	$(F95)  $(FFLAGS) $(INCLUDES) $(SOURCE) $(LIBS) -x c++ $(CPPSRC) -lstdc++ -o $(PROGRAM) `pkg-config gtkmm-3.0 --cflags --libs` 
