--- a/f90trj/Makefile.gfortran
+++ b/f90trj/Makefile.gfortran
@@ -1,7 +1,7 @@
 
 PROGRAM=trj
 
-SOURCE=interpol.f90 trj_mod.f90 ptotheta.f90 trj_netcdf.f90 date_conv.f90 trj_winds.f90 derivs.f90 derivstr.f90 ode.f90 odeint.f90 stereograph.f90 trj_main_mod.f90 main.f90
+SOURCE=trj_netcdf.f90 interpol.f90 ptotheta.f90 trj_winds.f90 trj_mod.f90 date_conv.f90 derivs.f90 derivstr.f90 ode.f90 odeint.f90 stereograph.f90 trj_main_mod.f90 main.f90
 F95=gfortran
 
 FFLAGS=-fdefault-real-8 -fbounds-check
