--- a/f90trj/Makefile.gtk
+++ b/f90trj/Makefile.gtk
@@ -1,7 +1,7 @@
 
 PROGRAM=trjgtk
 
-SOURCE=interpol.f90 trj_mod.f90 ptotheta.f90 trj_netcdf.f90 date_conv.f90 trj_winds.f90 derivs.f90 derivstr.f90 ode.f90 odeint.f90 stereograph.f90 trj_main_mod.f90
+SOURCE=trj_netcdf.f90 interpol.f90 ptotheta.f90 trj_winds.f90 trj_mod.f90 date_conv.f90 derivs.f90 derivstr.f90 ode.f90 odeint.f90 stereograph.f90 trj_main_mod.f90
 
 CPPSRC=../gui/Gtk-3/TrjApp.cpp
 
@@ -12,4 +12,4 @@ LIBS=-L/usr/lib -lnetcdff
 INCLUDES = -I/usr/include
 
 all : $(SOURCE)
-	$(F95)  $(FFLAGS) $(INCLUDES) $(SOURCE) $(LIBS) -x c++ $(CPPSRC) -lstdc++ -o $(PROGRAM) `pkg-config gtkmm-3.0 --cflags --libs` 
+	$(F95)  $(FFLAGS) $(INCLUDES) $(SOURCE) $(LIBS) -x c++ $(CPPSRC) -lstdc++ -o $(PROGRAM) `pkg-config gtkmm-3.0 --cflags --libs`
